# have-i-been-mevd

./: .env.example  .gitignore  README.md  pyproject.toml
bots/: .dockerignore  .env.example  Dockerfile  Procfile.fly  entrypoint.sh  fly.toml  pyproject.toml
bots/discord/: __main__.py  commands.py  schedules.py
bots/discord_bot/: __main__.py  commands.py  reports.py  schedules.py
bots/lib/: schedule.py  task_rotation.py  w3.py
bots/lib/templates/: __init__.py  images.py  utils.py
bots/lib/transformers/: zero_mev.py
bots/lib/zero_mev/: api.py  transformers.py
bots/telegram/: __main__.py
bots/telegram_bot/: __main__.py
bots/twitter_bot/: __main__.py  api.py  database.py  replies.py  reports.py  schedules.py
lib/: latest_eth_block.py  schedule.py
lib/templates/: __init__.py  utils.py
lib/transformers/: zero_mev.py
lib/zero_mev_api/: api.py  models.py  swagger.json
webapp/: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/mevreceipt/[address]/: opengraph-image.tsx  page.tsx
webapp/src/components/: AddressForm.tsx  BackToHomeButton.tsx  CustomConnectButton.tsx  Footer.tsx  Header.tsx  Input.tsx  InstallMEVBlockerButton.tsx  Loading.tsx  Receipts.tsx  RootLayout.tsx  Spinner.tsx  TradeOnCoWButton.tsx  TwitterShareButton.tsx
webapp/src/utils/: colors.ts  schema.ts  zeroMevApi.ts
webapp/src/wagmi/: client.ts
