[tool.poetry]
name = "mev-bot"
version = "0.1.0"
description = ""
authors = ["Pedro Yves Fracari <yves.fracari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
"discord.py" = "^2.3.2"
httpx = "^0.27.0"
web3 = "^6.16.0"
pystache = "^0.6.5"
ipython = "^8.23.0"
ratelimit = "^2.2.1"
schedule = "^1.2.1"
python-telegram-bot = "^21.1.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
tweepy = "^4.14.0"
retry-async = "^0.1.4"
sentry-sdk = "^2.3.1"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.5"
pyright = "^1.1.359"

[tool.pyright]
# NOTE: these paths are excluded but not IGNORED. They are still included in the analysis if they are referenced by source files that are not excluded. 
exclude = [
    "**/__pycache__",
    ".venv/",
]
reportIncompatibleVariableOverride = 'warning'
strictParameterNoneValue = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
